--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^4.11.0",
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.18.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
